--- a/src/app/features/gift-giving/containers/friends/friend-list/friend-list.component.html
+++ b/src/app/features/gift-giving/containers/friends/friend-list/friend-list.component.html
@@ -1,6 +1,8 @@
 <ul class="list-unstyled">
   <li class="alert alert-info"
       *ngFor='let friend of model'>
-    {{ friend.name }}
+    {{ friend.name }}&nbsp;&nbsp;
+    <a class="btn btn-sm btn-primary"
+       [routerLink]="['/gifts', 'friends', friend.id, 'holidays']">See Holidays</a>
   </li>
 </ul>
